ufw-iptables
# Generated by iptables-save v1.6.1 on Sun Sep  8 14:30:56 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-logging-allow - [0:0]
:ufw-logging-deny - [0:0]
:ufw-not-local - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-skip-to-policy-forward - [0:0]
:ufw-skip-to-policy-input - [0:0]
:ufw-skip-to-policy-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-user-input - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-output - [0:0]
-A INPUT -s 101.228.82.239/32 -p tcp -j DROP
-A INPUT -s 103.44.27.58/32 -p tcp -j DROP
-A INPUT -s 103.62.239.77/32 -p tcp -j DROP
-A INPUT -s 104.236.95.55/32 -p tcp -j DROP
-A INPUT -s 106.12.88.32/32 -p tcp -j DROP
-A INPUT -s 106.51.0.40/32 -p tcp -j DROP
-A INPUT -s 106.51.140.15/32 -p tcp -j DROP
-A INPUT -s 106.53.86.229/32 -p tcp -j DROP
-A INPUT -s 112.85.42.173/32 -p tcp -j DROP
-A INPUT -s 112.85.42.227/32 -p tcp -j DROP
-A INPUT -s 114.216.206.39/32 -p tcp -j DROP
-A INPUT -s 116.196.116.9/32 -p tcp -j DROP
-A INPUT -s 117.223.189.14/32 -p tcp -j DROP
-A INPUT -s 120.86.70.92/32 -p tcp -j DROP
-A INPUT -s 123.108.47.80/32 -p tcp -j DROP
-A INPUT -s 125.99.173.162/32 -p tcp -j DROP
-A INPUT -s 129.204.42.58/32 -p tcp -j DROP
-A INPUT -s 132.232.33.161/32 -p tcp -j DROP
-A INPUT -s 134.209.208.112/32 -p tcp -j DROP
-A INPUT -s 139.198.12.65/32 -p tcp -j DROP
-A INPUT -s 139.198.18.73/32 -p tcp -j DROP
-A INPUT -s 148.70.54.83/32 -p tcp -j DROP
-A INPUT -s 148.70.71.137/32 -p tcp -j DROP
-A INPUT -s 148.70.71.137/32 -p tcp -j DROP
-A INPUT -s 153.36.236.35/32 -p tcp -j DROP
-A INPUT -s 162.144.119.35/32 -p tcp -j DROP
-A INPUT -s 162.243.98.66/32 -p tcp -j DROP
-A INPUT -s 183.131.82.99/32 -p tcp -j DROP
-A INPUT -s 185.156.177.11/32 -p tcp -j DROP
-A INPUT -s 185.156.177.44/32 -p tcp -j DROP
-A INPUT -s 190.246.155.29/32 -p tcp -j DROP
-A INPUT -s 192.99.245.135/32 -p tcp -j DROP
-A INPUT -s 193.112.145.125/32 -p tcp -j DROP
-A INPUT -s 193.188.22.114/32 -p tcp -j DROP
-A INPUT -s 193.70.43.220/32 -p tcp -j DROP
-A INPUT -s 202.75.62.141/32 -p tcp -j DROP
-A INPUT -s 202.88.237.110/32 -p tcp -j DROP
-A INPUT -s 203.195.155.100/32 -p tcp -j DROP
-A INPUT -s 205.209.180.235/32 -p tcp -j DROP
-A INPUT -s 211.159.176.144/32 -p tcp -j DROP
-A INPUT -s 211.26.187.128/32 -p tcp -j DROP
-A INPUT -s 218.215.188.167/32 -p tcp -j DROP
-A INPUT -s 218.85.23.26/32 -p tcp -j DROP
-A INPUT -s 218.92.0.143/32 -p tcp -j DROP
-A INPUT -s 218.98.26.172/32 -p tcp -j DROP
-A INPUT -s 218.98.40.139/32 -p tcp -j DROP
-A INPUT -s 218.98.40.140/32 -p tcp -j DROP
-A INPUT -s 218.98.40.142/32 -p tcp -j DROP
-A INPUT -s 218.98.40.152/32 -p tcp -j DROP
-A INPUT -s 222.186.15.160/32 -p tcp -j DROP
-A INPUT -s 222.186.30.165/32 -p tcp -j DROP
-A INPUT -s 222.186.42.15/32 -p tcp -j DROP
-A INPUT -s 222.186.42.163/32 -p tcp -j DROP
-A INPUT -s 222.186.42.94/32 -p tcp -j DROP
-A INPUT -s 222.186.52.124/32 -p tcp -j DROP
-A INPUT -s 222.186.52.89/32 -p tcp -j DROP
-A INPUT -s 222.242.104.188/32 -p tcp -j DROP
-A INPUT -s 2.32.86.50/32 -p tcp -j DROP
-A INPUT -s 27.106.45.6/32 -p tcp -j DROP
-A INPUT -s 27.115.15.8/32 -p tcp -j DROP
-A INPUT -s 36.156.24.79/32 -p tcp -j DROP
-A INPUT -s 49.88.112.78/32 -p tcp -j DROP
-A INPUT -s 49.88.112.85/32 -p tcp -j DROP
-A INPUT -s 5.182.210.142/32 -p tcp -j DROP
-A INPUT -s 52.80.233.57/32 -p tcp -j DROP
-A INPUT -s 67.205.166.146/32 -p tcp -j DROP
-A INPUT -s 76.27.163.60/32 -p tcp -j DROP
-A INPUT -s 86.43.103.111/32 -p tcp -j DROP
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
-A ufw-after-input -p udp -m udp --dport 137 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 138 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 5900 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 139 -j ufw-skip-to-policy-input
-A ufw-after-input -p tcp -m tcp --dport 445 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 67 -j ufw-skip-to-policy-input
-A ufw-after-input -p udp -m udp --dport 68 -j ufw-skip-to-policy-input
-A ufw-after-input -m addrtype --dst-type BROADCAST -j ufw-skip-to-policy-input
-A ufw-after-logging-forward -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-before-forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-forward -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-forward -j ufw-user-forward
-A ufw-before-input -i lo -j ACCEPT
-A ufw-before-input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-input -m conntrack --ctstate INVALID -j ufw-logging-deny
-A ufw-before-input -m conntrack --ctstate INVALID -j DROP
-A ufw-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A ufw-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A ufw-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A ufw-before-input -j ufw-not-local
-A ufw-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A ufw-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A ufw-before-input -j ufw-user-input
-A ufw-before-output -o lo -j ACCEPT
-A ufw-before-output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A ufw-before-output -j ufw-user-output
-A ufw-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A ufw-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-not-local -m addrtype --dst-type LOCAL -j RETURN
-A ufw-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A ufw-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A ufw-not-local -m limit --limit 3/min --limit-burst 10 -j ufw-logging-deny
-A ufw-not-local -j DROP
-A ufw-skip-to-policy-forward -j DROP
-A ufw-skip-to-policy-input -j ACCEPT
-A ufw-skip-to-policy-output -j ACCEPT
-A ufw-track-input -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-input -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p tcp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-track-output -p udp -m conntrack --ctstate NEW -j ACCEPT
-A ufw-user-input -s 122.152.203.83/32 -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-input -s 182.254.243.109/32 -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit -m limit --limit 3/min -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT --reject-with icmp-port-unreachable
-A ufw-user-limit-accept -j ACCEPT
COMMIT
# Completed on Sun Sep  8 14:30:56 2019
